deprecate libs/libusbx [replaced by libusb]

--- a/libs/libusbx/HISTORY
+++ b/libs/libusbx/HISTORY
@@ -1,29 +1,4 @@
-2013-09-07 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.17
-
-2013-07-22 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.16
-
-2013-07-01 Ismael Luceno <ismael@sourcemage.org>
-	* DETAILS: updated spell to 1.0.16-rc1
-
-2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.15
-
-2012-10-29 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.14
-
-2012-09-21 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.13
-	  remove libusb-compat
-	* PRE_BUILD: deleted, libusb-compat: is not needed here
-
-2012-06-16 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.12
-
-2012-05-10 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: fix url for libusb-compat
-
-2012-05-09 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: 1.0.11, libusb-compat 0.1.4
-	 spell created, cloned from libusb spell
+2014-01-26  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated [replaced by libusb]
