--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2014-01-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.9
+
 2013-12-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.8
 
