webkitgtk: updated to 2.2.4

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,11 @@
+2014-01-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated to 2.2.4
+	* DEPENDS: updated to new dependencies
+	* CONFIURE: added new configure options
+	* PREPARE: removed
+	* PRE_BUILD: removed but may be needed if can get gtk-doc removal fixed
+	* BUILD: removed the make_single
+
 2013-01-08 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on RUBY (tested ruby-1.9 and ruby-1.8)
 
