abiword: updated to 3.0.0

--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,3 +1,8 @@
+2014-01-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated devel version to 3.0.0
+	* DEPENDS: updated depends, commented out currently broken backends
+	* CONFIGURE: added new configure options
+
 2014-01-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated devel version to 2.9.4
 
