--- a/perl-cpan/ack/HISTORY
+++ b/perl-cpan/ack/HISTORY
@@ -1,3 +1,7 @@
+2014-01-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.13_06
+	  SECURITY_LEVEL=1. see <http://beyondgrep.com/security/>
+
 2013-06-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.04
 
