--- a/education/klavaro/HISTORY
+++ b/education/klavaro/HISTORY
@@ -1,3 +1,8 @@
+2014-01-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.00
+	* DEPENDS: renewed dependencies
+	* CONFLICTS: added, gtkdatabox is included in klavaro
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.9.9
 
