--- a/audio-libs/liblo/HISTORY
+++ b/audio-libs/liblo/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.27
+
 2013-01-01 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 0.26
 
