--- a/xorg-lib/xtrans/HISTORY
+++ b/xorg-lib/xtrans/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.3
+
 2013-11-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.2
 
