--- a/xorg-data/xkeyboard-config/HISTORY
+++ b/xorg-data/xkeyboard-config/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.11
+
 2013-11-23 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0]
 
