--- a/audio-creation/ardour3/HISTORY
+++ b/audio-creation/ardour3/HISTORY
@@ -1,3 +1,14 @@
+2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.308; renewed source url; fixed desc
+	* BUILD: use ARDOUR3_OPTS; added --noconfirm flag to skip any additional
+	  configure questions
+	* CONFIGURE: unified ARDOUR3_PHONE to ARDOUR3_OPTS; added --lxvst option
+	* DEPENDS: rewritten -- serd, sord, sratom-0, lilv-0, suil-0 are
+	  optional and only required if lv2 is chosen; added missing required
+	  dependencies -- python, jack, libxml2; added missing optional
+	  dependencies -- lv2, doxygen, gettext, valgrind; dropped useless
+	  dependencies -- rasqal, redland, rdflib
+
 2013-10-24 Thomas Orgis <sobukus@sourcemage.org>
 	* CONFIGURE: added, option for phone-home
 
