--- a/net/socat/HISTORY
+++ b/net/socat/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.7.2.3; SECURITY_PATCH++ (CVE-2014-0019)
+
 2013-05-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.7.2.2; SECURITY_PATCH++ (CVE-2013-3571)
 
