--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.39
+
 2013-11-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.38
 
