--- a/chat-im/psi/HISTORY
+++ b/chat-im/psi/HISTORY
@@ -1,3 +1,9 @@
+2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.15
+	* DEPENDS: no longer needs QT3 support
+	  add aspell, enchant; qca2 is required
+	* BUILD: improve
+
 2009-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated stable and devel to 0.14
 
