--- a/crypto/openssh/HISTORY
+++ b/crypto/openssh/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.5p1
+
 2013-12-26 Ismael Luceno <ismael@sourcemage.org>
 	* CONFLICTS: doesn't conflict with dropbear
 
