djm.gpg: 0x6D920D30 added, Damien Miller <djm@mindrot.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-01-30 Ladislav Hagara <hgr@vabo.cz>
+	* djm.gpg: 0x6D920D30 added, Damien Miller <djm@mindrot.org>
+
 2014-01-25 Robin Cook <rcook@wyrms.net>
 	* x11-toolkits/goocanvas2  new spell
 
