--- a/net/mtr/HISTORY
+++ b/net/mtr/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.85
+
 2013-03-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.84
 
