--- a/python-pypi/cython/HISTORY
+++ b/python-pypi/cython/HISTORY
@@ -1,3 +1,6 @@
+2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.20
+
 2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.19.2
 
