mpfr$ - upstream patches

--- a/libs/mpfr/HISTORY
+++ b/libs/mpfr/HISTORY
@@ -1,3 +1,7 @@
+2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD,  allpatches.bz2: added, apply patches recommended by upstream
+
 2013-03-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.1.2
 
