--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2014-01-31 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 1.18.0
+
 2013-12-26 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 1.17.0
 
