--- a/graphics-libs/opencv/HISTORY
+++ b/graphics-libs/opencv/HISTORY
@@ -1,3 +1,6 @@
+2014-01-31 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 2.4.8
+
 2013-11-12 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 2.4.7
 
