--- a/crypto/sshfs-fuse/HISTORY
+++ b/crypto/sshfs-fuse/HISTORY
@@ -1,3 +1,7 @@
+2014-01-31 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.5
+
 2012-03-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.4
 
