--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-01-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.13.1: added
+	* latest_defaults: version 3.13.1
+
 2014-01-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD: add support for xz compressed kernels
 	* info/kernels/3.13, latest.defaults,
