--- a/devel/git-cola/HISTORY
+++ b/devel/git-cola/HISTORY
@@ -1,3 +1,6 @@
+2014-01-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.9.4
+
 2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.9.3
 
