--- a/gnome2-libs/gtkhtml2/HISTORY
+++ b/gnome2-libs/gtkhtml2/HISTORY
@@ -1,3 +1,6 @@
+2014-02-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.6.6
+
 2013-03-02 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 4.6.4
 
