--- a/devel/bluefish/HISTORY
+++ b/devel/bluefish/HISTORY
@@ -1,3 +1,6 @@
+2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.5
+
 2013-02-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.4; switched back to upstream gpg check
 	* DEPENDS: updated python dependency description; added more choice for
