ardour3: jack -> JACK-DRIVER

--- a/audio-creation/ardour3/HISTORY
+++ b/audio-creation/ardour3/HISTORY
@@ -1,3 +1,7 @@
+2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: switched jack to JACK-DRIVER; ardour3 works well with jack2
+	  after some internal configuration
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5.308; renewed source url; fixed desc
 	* BUILD: use ARDOUR3_OPTS; added --noconfirm flag to skip any additional
