--- a/audio-drivers/jack2/HISTORY
+++ b/audio-drivers/jack2/HISTORY
@@ -1,3 +1,7 @@
+2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: use official url instead of dropbox
+	* BUILD, INSTALL: switch to waf_build/waf_install functions
+
 2013-02-12 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: add website, update to 1.9.9.5
 	  Note: SCM option is outdated, jack2 is using git
