cluster/lapack: version 3.5.0

--- a/cluster/lapack/HISTORY
+++ b/cluster/lapack/HISTORY
@@ -1,3 +1,9 @@
+2014-02-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.5.0
+	* BUILD, DEPENDS: use cmake
+	* DEPENDS: depend on python
+	* PRE_BUILD, INSTALL: removed
+
 2011-10-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.3.1
 
