waf_build(): include missing configdir option

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* FUNCTIONS: include missing configdir option in waf_build()
+
 2014-01-30 Ladislav Hagara <hgr@vabo.cz>
 	* djm.gpg: 0x6D920D30 added, Damien Miller <djm@mindrot.org>
 
