--- a/audio-creation/fluidsynth/HISTORY
+++ b/audio-creation/fluidsynth/HISTORY
@@ -1,3 +1,10 @@
+2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: don't do useless doc'ing
+	* BUILD: switched to cmake
+	* DEPENDS: rewritten for official cmake build support; added missing
+	  dependencies: cmake, readline,  portaudio19
+	* CONFIGURE: removed, oss support is added automatically with cmake
+
 2013-11-03 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.1.6
 	  updated SOURCE, SOURCE_URL, and Website
