--- a/editors/tea/HISTORY
+++ b/editors/tea/HISTORY
@@ -1,3 +1,9 @@
+2014-02-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 37.1.0
+	  new url
+	* DEPENDS: depends QT, optional aspell/hunspell
+	* BUILD: use qt{4,5}_build
+
 2012-07-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 33.2.0
 
