njconnect: new spell, curses JACK connection manager

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* audio-soft/njconnect: new spell, curses JACK connection manager
+
 2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
 	* FUNCTIONS: include missing configdir option in waf_build()
 
