jack: added missing header (jslist.h)

--- a/audio-drivers/jack/HISTORY
+++ b/audio-drivers/jack/HISTORY
@@ -1,3 +1,8 @@
+2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD: apply patch
+	* jslist.patch: added, to include missing header
+
 2013-03-09 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: removed optional_depends libfreebob, spell removed, and
 	  portaudio, to prevent a cyclic dependency and is not needed on linux
