--- a/libs/findlib/HISTORY
+++ b/libs/findlib/HISTORY
@@ -1,3 +1,6 @@
+2014-02-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.4
+
 2013-06-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix WEB_SITE
 
