devel/ocaml: version 4.01.0

--- a/devel/ocaml/HISTORY
+++ b/devel/ocaml/HISTORY
@@ -1,3 +1,6 @@
+2014-02-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.01.0
+
 2013-01-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* TRIGGERS: perform check_self on cast binutils, tk, tcl
 
