--- a/devel/coq/HISTORY
+++ b/devel/coq/HISTORY
@@ -1,3 +1,7 @@
+2014-02-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 0001-fix-make-detection.patch: fix detection of
+	  make in configure
+
 2013-05-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependency on zarith
 
