--- a/security/rkhunter/HISTORY
+++ b/security/rkhunter/HISTORY
@@ -1,3 +1,6 @@
+2014-02-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.4.0
+
 2011-02-22 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.3.8
 
