--- a/disk/gdisk/HISTORY
+++ b/disk/gdisk/HISTORY
@@ -1,3 +1,7 @@
+2014-02-02 Treeve Jelbert <treeve@souremage.org>
+	* DETAILS: version 0.8.8
+	* DEPENDS: add ncurses, util-linux
+
 2013-07-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.8.7
 
