--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9
+
 2014-01-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 2.8.2
 
