--- a/python-pypi/rsa/HISTORY
+++ b/python-pypi/rsa/HISTORY
@@ -1,3 +1,6 @@
+2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.1.2
+
 2012-06-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.1.1
 
