--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2014-02-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.2
+
 2014-01-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.1
 
