--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-03  Treeve Jelbert <treeve@sourcemage.org>
+	* disk/gnu-efi: new spell, Develop EFI applications
+
 2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
 	* audio-soft/njconnect: new spell, curses JACK connection manager
 
