--- a/disk/gnu-efi/HISTORY
+++ b/disk/gnu-efi/HISTORY
@@ -1,4 +1,7 @@
 2014-02-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0u
 	  spell created
+	* BUILD, INSTALL, DEPENDS: tweaked
+	* DETAILS: fix date, disable staging
+	  gnu-efi does not respect INSTALL_ROOT usage
 
