--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,6 @@
+2014-02-04 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.3
+
 2013-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.10.2
 
