--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-02-04 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 27.0, SECURITY_PATCH=71
+
 2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 26.0, SECURITY_PATCH++
 	* install_dir.patch: renewed
