--- a/devel/qt-creator/HISTORY
+++ b/devel/qt-creator/HISTORY
@@ -1,6 +1,9 @@
 2014-02-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: stable version 3.0.1
 
+2014-02-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS, BUILD: add qt5 support
+
 2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: stable version 3.0.0
 
