--- a/http/qupzilla/HISTORY
+++ b/http/qupzilla/HISTORY
@@ -1,3 +1,6 @@
+2014-02-04 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD, DEPENDS: add qt5 support
+
 2014-02-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6.1
 
