--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added account data for gnarwl spell
+	* mail/gnarwl: new spell, LDAP based email autoresponder
 
 2014-02-03  Treeve Jelbert <treeve@sourcemage.org>
 	* disk/gnu-efi: new spell, Develop EFI applications
