qtbase: removed demos from BUILD to match CONFIGURE

--- a/qt5/qtbase/HISTORY
+++ b/qt5/qtbase/HISTORY
@@ -1,3 +1,6 @@
+2014-02-05 Tommy Boatman <tboatman@sourcemage.org>
+	* BUILD: removed demos to match CONFIGURE
+
 2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.2.0
 
