--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-06  Treeve Jelbert <treeve@sourcemage.org>
+	* qbs: move to devel, it is not just for qt5
+
 2014-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added account data for gnarwl spell
 	* mail/gnarwl: new spell, LDAP based email autoresponder
