--- a/devel/qbs/HISTORY
+++ b/devel/qbs/HISTORY
@@ -1,3 +1,7 @@
+2014-02-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.1
+	* DEPENDS, BUILD: add support for qt4
+
 2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.0
 	  spell created
