stunnel: added forgotten HISTORY changes (thanks to lace@)

--- a/net/stunnel/HISTORY
+++ b/net/stunnel/HISTORY
@@ -1,3 +1,15 @@
+2014-02-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.56; added mirrors for pgp signature;
+	  ACTIVE_FTP=on (official ftp doesn't support passive ftp connections)
+	* DEPENDS: added optional tcp_wrappers dependency
+	* BUILD: switched to modern build api2; use STUNNEL_THREAD, STUNNEL_OPTS
+	* INSTALL: fixed certificate generation procedure
+	* CONFIGURE: added threads and IPv6 configure options; use message;
+	  added missing `&&'
+	* PRE_BUILD: added, to fix build/install paths
+	* excluded: added, to exclude generated certificate from install log
+	* init.d/stunnel: added, init script for stunnel
+
 2013-03-04 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 4.55
 	  changed SOURCE_URLs to use archive dir so source is always available
