devel/gdb: version 7.7

--- a/devel/gdb/HISTORY
+++ b/devel/gdb/HISTORY
@@ -1,3 +1,6 @@
+2014-02-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 7.7
+
 2013-05-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: disable_pic
 
