--- a/python-pypi/pycrypto/HISTORY
+++ b/python-pypi/pycrypto/HISTORY
@@ -1,3 +1,6 @@
+2014-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.1; SECURITY_PATCH++ (CVE-2013-1445)
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix python usage
 
