--- a/disk/gnu-efi/HISTORY
+++ b/disk/gnu-efi/HISTORY
@@ -1,3 +1,7 @@
+2014-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* BUILD: clear CFLAGS
+
 2014-02-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0u
 	  spell created
