--- a/utils/mdp/HISTORY
+++ b/utils/mdp/HISTORY
@@ -1,2 +1,5 @@
+2014-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.0
+
 2014-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, CONFIGURE, {PRE_,}BUILD, mdp.gpg: created spell
