--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-07  Treeve Jelbert <treeve@sourcemage.org>
+	* disk/gummiboot: new spell, EFI boot manager
+
 2014-02-06  Treeve Jelbert <treeve@sourcemage.org>
 	* qbs: move to devel, it is not just for qt5
 
