--- a/science-libs/cln/HISTORY
+++ b/science-libs/cln/HISTORY
@@ -1,3 +1,6 @@
+2014-02-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.3
+
 2011-05-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.2
 
