--- a/kde4-apps/tellico2/HISTORY
+++ b/kde4-apps/tellico2/HISTORY
@@ -1,3 +1,7 @@
+204-01-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.4.8
+	* DEPENDS: add libkcddb, yaz, qimageblitz, qjson
+
 2012-10-12 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: libv4l -> v4l-utils
 
