delete obsolete kde3 stuff

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
+	* FUNCTIONS: delete obsolete kde3 stuff
+
 2014-02-07  Treeve Jelbert <treeve@sourcemage.org>
 	* disk/gummiboot: new spell, EFI boot manager
 
