deprecate kde4/ksecrets

--- a/kde4/ksecrets/HISTORY
+++ b/kde4/ksecrets/HISTORY
@@ -1,6 +1,4 @@
-2012-08-18 Tommy Boatman <tboatman@sourcemage.org>
-	* DETAILS: 4.8.5 (no 4.9 yet), bz2 -> xz
-
-2012-02-11 Bor Kraljič <pyrobor@ver.si>
-	* DEPENDS, DETAILS: spell created
-
+2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated 
