deprecate kde4/kdeedu4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4/kdeedu4: spell deprecated 
+
+2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
 	* FUNCTIONS: delete obsolete kde3 stuff
 
 2014-02-07  Treeve Jelbert <treeve@sourcemage.org>
