deprecate kde4/kdegraphics4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4/kdegraphics4: spell deprecated 
+
+2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/kdemultimedia4: spell deprecated 
 
 2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
