--- a/utils/mdp/HISTORY
+++ b/utils/mdp/HISTORY
@@ -1,3 +1,6 @@
+2014-02-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.2
+
 2014-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.0
 
