--- a/python-pypi/isort/HISTORY
+++ b/python-pypi/isort/HISTORY
@@ -1,3 +1,6 @@
+2014-02-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.4.1
+
 2014-01-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.3.0
 
