--- a/libs/libatomic_ops/HISTORY
+++ b/libs/libatomic_ops/HISTORY
@@ -1,3 +1,6 @@
+2014-02-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.4.0
+
 2012-05-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.2
 
