--- a/http/apache22/HISTORY
+++ b/http/apache22/HISTORY
@@ -1,3 +1,6 @@
+2014-02-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.26; added archive site for source urls
+
 2013-07-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.25; SECURITY_PATCH++ (CVE-2012-4558,
 	  CVE-2012-3499, CVE-2013-1862, CVE-2013-1896)
