--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2014-02-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.25 (stable)
+
 2014-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.24 (stable)
 
