skrooge: 1.8.0, download URL to download.kde.org

--- a/kde4-apps/skrooge/HISTORY
+++ b/kde4-apps/skrooge/HISTORY
@@ -1,3 +1,6 @@
+2014-02-10 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: stable -> 1.8.0, download URL to download.kde.org
+
 2011-10-07 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 1.0.0
 
