--- a/devel/graphviz/HISTORY
+++ b/devel/graphviz/HISTORY
@@ -1,3 +1,6 @@
+2014-02-10 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: 2.36.0
+
 2013-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.34.0
 
