--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2014-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.9
+
 2013-12-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.8
 
