--- a/ftp/ncdc/HISTORY
+++ b/ftp/ncdc/HISTORY
@@ -1,3 +1,7 @@
+2014-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.19
+	* DEPENDS: added optional geoip support
+
 2013-10-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.18
 
