--- a/database/db/HISTORY
+++ b/database/db/HISTORY
@@ -1,3 +1,6 @@
+2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: switch uudeview to UUDECODE - sharutils and gmime both work
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.3.21
 
