freetype2: requires libpng

--- a/graphics-libs/freetype2/HISTORY
+++ b/graphics-libs/freetype2/HISTORY
@@ -1,3 +1,6 @@
+2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: libpng
+
 2013-12-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.5.2
 	* PRE_BUILD, ft2build.patch: updated
