--- a/graphics-libs/giflib/HISTORY
+++ b/graphics-libs/giflib/HISTORY
@@ -1,3 +1,6 @@
+2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: requires xmlto
+
 2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.2.3
 
