--- a/kde4-look/oxygen-gtk2/HISTORY
+++ b/kde4-look/oxygen-gtk2/HISTORY
@@ -1,3 +1,6 @@
+2014-02-12 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 1.4.3
+
 2013-09-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.4.0
 
