--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
+	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
+
 2014-02-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* devel/ninja-build-system: new spell, a small build system with a focus
 	  on speed
