--- a/utils/unetbootin/HISTORY
+++ b/utils/unetbootin/HISTORY
@@ -1,3 +1,6 @@
+2014-02-12 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 585
+
 2012-01-04 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 563
 
