filezilla : updated version to 3.7.4.1

--- a/ftp/filezilla/HISTORY
+++ b/ftp/filezilla/HISTORY
@@ -1,3 +1,6 @@
+2014-02-12 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.7.4.1
+
 2012-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.6.0.1
 
