--- a/disk/udisks/HISTORY
+++ b/disk/udisks/HISTORY
@@ -1,3 +1,7 @@
+2014-02-12 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: needs policykit regardless of gtk-doc
+	           needs dbus-glib
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
