devel/ninja-build-system: new spell, a small build system with a focus on speed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* devel/ninja-build-system: new spell, a small build system with a focus
+	  on speed
+
 2014-02-09  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/kdegraphics4: spell deprecated 
 
