--- a/graphics/openexr/HISTORY
+++ b/graphics/openexr/HISTORY
@@ -1,3 +1,6 @@
+2014-02-12 Tommy Boatman <tboatman@sourcemage.org>
+	* DETAILS: 2.1.0
+
 2013-04-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.0
 	* PRE_BUILD, 0001-add-missing-header.patch: removed
