--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-13  Treeve Jelbert <treeve@sourcemage.org>
+	* libs/pyqt5: new spell- PyQt for Qt5
+
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
 
