--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,7 @@
+2014-02-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.15.4
+	* DEPENDS, BUILD, INSTALL: adapt to python3
+
 2013-03-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.14.5
 
