--- a/libs/sip/INSTALL
+++ b/libs/sip/INSTALL
@@ -1,3 +1,2 @@
-  make                                                     &&
-  make install						   &&
-  mkdir -p /usr/share/sip
+make install  &&
+mkdir -p $INSTALL_ROOT/usr/share/sip
