--- a/net/openvpn/HISTORY
+++ b/net/openvpn/HISTORY
@@ -1,3 +1,8 @@
+2014-02-13 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 2.3.2
+	* DEPENDS: added linux-pam as dependency
+	* openvpn.gpg: replaced with new signing key
+
 2012-04-18 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 2.2.2
 
