--- a/utils/dbus-glib/HISTORY
+++ b/utils/dbus-glib/HISTORY
@@ -1,3 +1,6 @@
+2014-02-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.102
+
 2013-05-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.100.2
 
