kdebase4: optional depends tidy

--- a/kde4/kdebase4/HISTORY
+++ b/kde4/kdebase4/HISTORY
@@ -1,3 +1,6 @@
+2014-02-14 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: tidy is optional for HTML validation
+
 2013-08-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.10.5
 
