orc: optional gtk-doc depends and typo fixes

--- a/libs/orc/HISTORY
+++ b/libs/orc/HISTORY
@@ -1,8 +1,12 @@
+2014-02-14 Tommy Boatman <tboatman@sourcemage.org>
+	* DEPENDS: Created.  gtk-doc optional for doc building
+	* HISTORY: Corrected a couple of typos
+
 2013-10-17 Treeve Jelbert <treeve@sourcemage.org>
-	* DTEAAILS: version 0.4.18
+	* DETAILS: version 0.4.18
 
 2013-04-06 Treeve Jelbert <treeve@sourcemage.org>
-	* DTEAAILS: version 0.4.17
+	* DETAILS: version 0.4.17
 
 2012-01-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.4.16
