glibc: Switch to .xz files for 3.x kernel headers (.bz2 files not present for recent versions).

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,7 @@
+2014-02-15 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS, PRE_BUILD: Use .xz files for 3.x kernels, .bz2 missing
+	  for newer versions.
+
 2013-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: TMPFS=off
 
