--- a/shell-term-fm/zsh/HISTORY
+++ b/shell-term-fm/zsh/HISTORY
@@ -1,3 +1,6 @@
+2014-02-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.0.5
+
 2013-02-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix SOURCE_URL[0]
 
