--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,9 @@
+2014-02-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.9.26
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: add sub dependency on graphite2
+	* DEPENDS: explicitly active/deactive optional dependencies
+	  when calling configure
+
 2014-01-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.25
 
