--- a/video/v4l-utils/HISTORY
+++ b/video/v4l-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-02-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.0.1
+
 2013-10-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.0
 	* DEPENDS: qv4l2 enabled
