--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2014-02-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.1.3
+
 2014-01-22 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: libcdio-paranoia required
 
