--- a/python-pypi/fuzzyparsers/HISTORY
+++ b/python-pypi/fuzzyparsers/HISTORY
@@ -1,3 +1,7 @@
+2014-02-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.0
+	* DEPENDS: support python3
+
 2012-06-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.0
 	  LICENCE=MIT
