--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-02-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 27.0.1, SECURITY_PATCH=72
+
 2014-02-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 27.0, SECURITY_PATCH=71
 
