--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2014-02-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.2.51
+
 2012-07-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.50, SECURITY_PATCH=9, CVE-2012-3386
 
