--- a/utils/multitail/HISTORY
+++ b/utils/multitail/HISTORY
@@ -1,3 +1,6 @@
+2014-02-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.2.1
+
 2014-01-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.0
 	* PRE_BUILD: added
