--- a/shell-term-fm/pcmanfm/HISTORY
+++ b/shell-term-fm/pcmanfm/HISTORY
@@ -1,3 +1,6 @@
+2014-02-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.2.0, gz -> xz
+
 2013-11-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.1.2
 
