--- a/xorg-app/xcb-util-wm/HISTORY
+++ b/xorg-app/xcb-util-wm/HISTORY
@@ -1,3 +1,6 @@
+2014-02-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.1
+
 2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.0
 
