--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,9 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.20140221
+	* PRE_BUILD, 0001-add-missing-dependency-on-regex-compat.patch:
+	  fix missing dependency in cabal file
+	* DEPENDS: add dependency on haskell-regex-compat
+
 2014-02-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20140210
 
