editors/vim: apply patches 7.4.001 to 7.4.183

--- a/editors/vim/HISTORY
+++ b/editors/vim/HISTORY
@@ -1,3 +1,8 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD: apply upstream patches 7.4.001 to 7.4.183
+	* vim-patches-tarball: adapted to current version
+	* if_perl.patch: removed
+
 2013-08-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD:  Vim fails to use perl shared
 	  libs when using perl 5.16 from test.  And also
