--- a/haskell/haskell-syb/HISTORY
+++ b/haskell/haskell-syb/HISTORY
@@ -1,3 +1,6 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.4.1
+
 2012-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.7
 
