--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 	* python-pypi/cffi: new spell, python -> interface
 	* python-pypi/pycparser: new spell, C99 parser
 
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-data-default-class: new spell, a class for types with a
+	  default value
+
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
 
