haskell/haskell-data-default-instances-base: new spell, a class for types with a default value

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,9 @@
 	* python-pypi/pycparser: new spell, C99 parser
 
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* haskell/haskell-data-default-class: new spell, a class for types with a
-	  default value
+	* haskell/haskell-data-default-class,
+	  haskell/haskell-data-default-instances-base: new spells, a
+	  class for types with a default value
 
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
