--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,9 @@
 
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-data-default-class,
-	  haskell/haskell-data-default-instances-base: new spells, a
-	  class for types with a default value
+	  haskell/haskell-data-default-instances-base,
+	  haskell/haskell-data-default-instances-containers:
+	  new spells, a class for types with a default value
 
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
