--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,8 @@
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-data-default-class,
 	  haskell/haskell-data-default-instances-base,
-	  haskell/haskell-data-default-instances-containers:
+	  haskell/haskell-data-default-instances-containers,
+	  haskell/haskell-data-default-instances-dlist:
 	  new spells, a class for types with a default value
 
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
