haskell/haskell-data-default-instances-old-locale: new spell, a class for types with a default value

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,8 @@
 	* haskell/haskell-data-default-class,
 	  haskell/haskell-data-default-instances-base,
 	  haskell/haskell-data-default-instances-containers,
-	  haskell/haskell-data-default-instances-dlist:
+	  haskell/haskell-data-default-instances-dlist,
+	  haskell/haskell-data-default-instances-old-locale:
 	  new spells, a class for types with a default value
 
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
