--- a/haskell/haskell-data-default/HISTORY
+++ b/haskell/haskell-data-default/HISTORY
@@ -1,3 +1,6 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, DEPENDS: version 0.5.3
+
 2013-03-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
