haskell/haskell-scientific: new spell, scientific numbers for haskell

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	  haskell/haskell-data-default-instances-dlist,
 	  haskell/haskell-data-default-instances-old-locale:
 	  new spells, a class for types with a default value
+	* haskell/haskell-scientific: new spell, representing scientific numbers
+	  in haskell
 
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
