--- a/haskell/haskell-unordered-containers/HISTORY
+++ b/haskell/haskell-unordered-containers/HISTORY
@@ -1,3 +1,6 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.2.3.3
+
 2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.2.3.2
 
