--- a/haskell/haskell-quickcheck/HISTORY
+++ b/haskell/haskell-quickcheck/HISTORY
@@ -1,3 +1,6 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.6
+
 2013-03-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.5.1.1
 	* BUILD: removed
