--- a/haskell/haskell-parsec/HISTORY
+++ b/haskell/haskell-parsec/HISTORY
@@ -1,3 +1,6 @@
+2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.1.5
+
 2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.1.3
 
