--- a/haskell/haskell-monad-control/HISTORY
+++ b/haskell/haskell-monad-control/HISTORY
@@ -1,3 +1,6 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.2.3
+
 2013-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
