--- a/haskell/haskell-http/HISTORY
+++ b/haskell/haskell-http/HISTORY
@@ -1,3 +1,6 @@
+2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4000.2.11
+
 2013-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
