--- a/haskell/haskell-hashable/HISTORY
+++ b/haskell/haskell-hashable/HISTORY
@@ -1,3 +1,6 @@
+2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.1.0
+
 2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
