--- a/haskell/haskell-blaze-builder/HISTORY
+++ b/haskell/haskell-blaze-builder/HISTORY
@@ -1,3 +1,6 @@
+2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.3.2
+
 2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
