--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 	* python-pypi/cffi: new spell, python -> interface
 	* python-pypi/pycparser: new spell, C99 parser
 
+2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-network-info: new spell, a library that provides access
+	  to a local computer's network info
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-data-default-class,
 	  haskell/haskell-data-default-instances-base,
