--- a/haskell/haskell-aeson/HISTORY
+++ b/haskell/haskell-aeson/HISTORY
@@ -1,3 +1,6 @@
+2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, DEPENDS: version 0.7.0.1
+
 2013-09-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.6.2.0
 
