haskell/haskell-monads-tf: new spell, monad classes using type families

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-network-info: new spell, a library that provides access
 	  to a local computer's network info
+	* haskell/haskell-monads-tf: new spell, monad classes using type families
 
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-data-default-class,
