--- a/haskell/haskell-monadcatchio-transformers/HISTORY
+++ b/haskell/haskell-monadcatchio-transformers/HISTORY
@@ -1,3 +1,6 @@
+2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS, DETAILS: version 0.3.1.0
+
 2013-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
