--- a/utils/dbus-python/HISTORY
+++ b/utils/dbus-python/HISTORY
@@ -1,3 +1,7 @@
+2014-02-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.0
+	* DEPENDS: PYTHON, supports python3
+
 2012-07-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1.1
 
