--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-23  Treeve Jelbert <treeve@sourcemage.org>
+	* python-pypi/cffi: new spell, python -> interface
+
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
 
