--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-02-23  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/cffi: new spell, python -> interface
+	* python-pypi/pycparser: new spell, C99 parser
 
 2014-02-12  Treeve Jelbert <treeve@sourcemage.org>
 	* http/qtwebkit: spell deprecated [replaced by qt5/qtwebkit]
