--- a/python-pypi/pyxattr/HISTORY
+++ b/python-pypi/pyxattr/HISTORY
@@ -1,3 +1,7 @@
+2014-02-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.5.2
+	* PRE_BUILD: added, suppress error messages
+
 2012-04-28 Treeve Jelbert <treeve@source.age.org>
 	* DEPENDS: add attr
 
