--- a/ftp/aria2/HISTORY
+++ b/ftp/aria2/HISTORY
@@ -1,3 +1,7 @@
+2014-02-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.18.3
+	  Switched to .xz
+
 2012-04-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.15.0
 
