--- a/libs/pyqt4/HISTORY
+++ b/libs/pyqt4/HISTORY
@@ -1,3 +1,8 @@
+2014-02-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.10.3
+	* DEPENDS, BUILD: add python3 support
+	* BUILD: enable multiple make jobs
+
 2013-03-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.10
 
