--- a/python-pypi/fb-python/HISTORY
+++ b/python-pypi/fb-python/HISTORY
@@ -1,3 +1,6 @@
+2014-02-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.0
+
 2014-02-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.4
 
