--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2014-0224 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.13 (devel)
+
 2013-11-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6.1 & 1.7.7
 
