--- a/wm-addons/alltray/HISTORY
+++ b/wm-addons/alltray/HISTORY
@@ -1,3 +1,7 @@
+2014-02-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL
+	* BUILD: fix linking against libX11
+
 2009-02-19 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 0.70. Updated WEB_SITE
 
