--- a/devel/qxorm/HISTORY
+++ b/devel/qxorm/HISTORY
@@ -1,3 +1,6 @@
+2014-02-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.6
+
 2012-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: depends -sub SERIALIZATION boost
 	  qt4 => QT
