devel/stlink: new spell, tools for interacting with ST's ARM developer boards

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* devel/stlink: new spell, tools for interacting with ST's ARM
+	  developer boards
+
 2014-02-23  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/cffi: new spell, python -> interface
 	* python-pypi/pycparser: new spell, C99 parser
