--- a/utils/phoronix-test-suite/HISTORY
+++ b/utils/phoronix-test-suite/HISTORY
@@ -1,3 +1,6 @@
+2014-02-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.8.6
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on fortran to dependency on gcc with
 	  sub-depends on FORTRAN (scripted)
