--- a/devel/git-cola/HISTORY
+++ b/devel/git-cola/HISTORY
@@ -1,3 +1,6 @@
+2014-02-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.0.0
+
 2014-01-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.9.4
 
