giflib: xmlto can shove it
xmlto dep -> optional
use sane sourceforge url
actually install man pages

--- a/graphics-libs/giflib/HISTORY
+++ b/graphics-libs/giflib/HISTORY
@@ -1,3 +1,8 @@
+2014-02-25 Remko van der Vossen
+	* DEPENDS, PRE_BUILD: xmlto can shove it
+	* DETAILS: use sane sourceforge url
+	* INSTALL: actually install man pages
+
 2014-02-11 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: requires xmlto
 
