--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,6 @@
+2014-02-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.7
+
 2013-10-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* init.d/monit: moved to runlevel 2, according to official doc; depends
