--- a/utils/iotop/HISTORY
+++ b/utils/iotop/HISTORY
@@ -1,3 +1,12 @@
+2014-02-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.6; switched to upstream pgp check; updated
+	  short description
+	* DEPENDS: switched to PYTHON
+	* INSTALL: switched to default_install_python
+	* PREPARE: added, to check kernel configuration
+	* iotop.gpg: added, imported 4D23A27E public key (Guillaume Chazarain
+	  <guichaz@gmail.com>)
+
 2013-02-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5
 
