--- a/science/maxima/HISTORY
+++ b/science/maxima/HISTORY
@@ -1,3 +1,7 @@
+2014-02-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 5.32.1
+
 2013-02-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.29.1
 
