--- a/libs/libusb/HISTORY
+++ b/libs/libusb/HISTORY
@@ -1,3 +1,6 @@
+2014-02-27 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: optional dependency on udev
+
 2014-01-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.18, libusb-compat 0.1.5, WEB_SITE updated
 
