--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-02-27 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: optional depends gstreamer
+
 2014-02-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 27.0.1, SECURITY_PATCH=72
 
