--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,6 @@
+2014-02-27 Remko van der Vossen <wich@sourcemage.org>
+»·······* DEPENDS: optional depends gstreamer
+
 2013-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 24.2.0, SECURITY_PATCH++
 	* 0001-remove-version-number-from-thunderbird-s-installatio.patch,
