--- a/kde4-support/libdbusmenu-qt/HISTORY
+++ b/kde4-support/libdbusmenu-qt/HISTORY
@@ -1,3 +1,8 @@
+2014-02-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL +++
+	  new WEBSITE
+	  SOURCE_URL get sources from ubuntu
+
 2012-05-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.2
 
