haskell-case-insensitive: new spell, case insensitive string comparison for haskell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2014-02-27  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/libevdev: new spell, wrapper library for evdev devices
 
+2014-02-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-case-insensitive: new spell, case insensitive string
+	  comparison for haskell
+
 2014-02-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* devel/stlink: new spell, tools for interacting with ST's ARM
 	  developer boards
