--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-02-27  Treeve Jelbert <treeve@sourcemage.org>
+	* libs/libevdev: new spell, wrapper library for evdev devices
+
 2014-02-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* devel/stlink: new spell, tools for interacting with ST's ARM
 	  developer boards
