--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-02-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.2
+
 2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1
 
