--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-02-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.46
+
 2014-01-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.44
 
