--- a/kde4-apps/clementine/HISTORY
+++ b/kde4-apps/clementine/HISTORY
@@ -1,3 +1,6 @@
+2014-02-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.2.2, SOURCE_URL[0] & SOURCE_DIRECTORY updated
+
 2013-11-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.1
 
