--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2014-02-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.18.8
+
 2014-01-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.18.6
 	* DEPENDS: depend on stable version of ffmpeg if ffmpeg is selected,
