--- a/audio-players/cantata/HISTORY
+++ b/audio-players/cantata/HISTORY
@@ -1,3 +1,8 @@
+2014-02-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.3.0.1
+	* DEPENDS: add dependency on qjson, optional deps on cdparanoia,
+	  libcddb, musicbrainz
+
 2014-01-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2.1
 
