--- a/utils/statifier/HISTORY
+++ b/utils/statifier/HISTORY
@@ -1,3 +1,7 @@
+2014-03-01 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.7.3
+
 2010-07-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, BUILD: created this spell, version 1.7.1
 
