--- a/python-pypi/rsa/HISTORY
+++ b/python-pypi/rsa/HISTORY
@@ -1,3 +1,6 @@
+2014-03-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.1.4
+
 2014-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: use PY_DEPENDS from section
 
