--- a/python-pypi/py-bcrypt/HISTORY
+++ b/python-pypi/py-bcrypt/HISTORY
@@ -1,3 +1,7 @@
+2014-03-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.4
+	* DEPENDS: switched to PYTHON (python3 supported)
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.3; renewed source urls; SECURITY_PATCH++
 	  (CVE-2013-1895)
