--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,6 @@
+2014-03-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.0
+
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: added missing handle of $FWKNOP_OPTS
 
