--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,8 @@
+2014-03-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: devel -> stable; stable -> legacy; added 1.4.10 version as
+	  devel branch
+	* PREPARE: added legacy branch
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.48 (devel)
 
