--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,7 @@
+2014-03-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version v1.5
+	* FINAL: force ldconfig
+
 2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version v1.3
 
