adjust cmake install locations for lib and man

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2014-03-05  Ismael Luceno <ismael@sourcemage.org>
 	* utils/nicstat: new spell, Network traffic statics utility for Solaris and Linux
 
+2014-03-04  Treeve Jelbert <treeve@sourcemage.org>
+	* FUNCTIONS: fix cmake usage of install dirs, for lib and man
+
 2014-02-27  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/libevdev: new spell, wrapper library for evdev devices
 
