--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,6 @@
+2014-03-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9.3.3; SECURITY_PATCH++ (several CVEs)
+
 2013-04-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.2.4; SECURITY_PATCH++ (CVE-2013-1899,
 	  CVE-2013-1900, CVE-2013-1901)
