--- a/python-pypi/fabric/HISTORY
+++ b/python-pypi/fabric/HISTORY
@@ -1,3 +1,7 @@
+2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.8.2
+	* DEPENDS: switched to PYTHON
+
 2013-02-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.3
 
