haskell/haskell-git-annex: version 5.20140306

--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,10 @@
+2014-03-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.20140306
+	* DEPENDS: add dependencies on haskell-case-insensitive and
+	  haskell-data-default
+	* PRE_BUILD, 0001-add-missing-dependency-on-regex-compat.patch:
+	  remove obsolete patch
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20140221
 	* PRE_BUILD, 0001-add-missing-dependency-on-regex-compat.patch:
