libs/libquvi: fix SOURCE_URL

--- a/libs/libquvi/HISTORY
+++ b/libs/libquvi/HISTORY
@@ -1,2 +1,5 @@
+2014-03-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL
+
 2013-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, CONFLICTS: spell created, version 0.4.1
