grub2: don't strip binary objects

--- a/disk/grub2/HISTORY
+++ b/disk/grub2/HISTORY
@@ -1,3 +1,6 @@
+2014-03-09 Remko van der Vossen <wich@sourcemage.org>
+	* BUILD: Do not strip objects, it leads to a broken grub
+
 2013-08-24 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, CONFIGURE: Allow to select the target platform
 
