--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,6 @@
+2014-03-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2014a
+
 2013-12-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* INSTALL: remove solar*, add some missing &&
