php: => 5.4.26 (stable) [security]

--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2014-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.26 (stable); SECUIRTY_PATCH++
+	  (CVE-2014-1943, CVE-2014-2270)
+
 2014-02-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.25 (stable)
 
