gnutls 3.2.12.1 + URL fix
Signed-off-by: Ismael Luceno <ismael@sourcemage.org>

--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,7 @@
+2014-03-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated GNUTLS_BRANCH=stable to 3.2.12.1
+
 2014-03-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.2.12 and 3.1.22, this fixes CVE-2014-1959
 	  and CVE-2014-0092
