audio-drivers/mudita24: new spell, a mixer GUI for ice1712 based sound cards

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* audio-drivers/mudita24: new spell, a mixer GUI for ice1712 based sound
+	  cards
+
 2014-03-07  Treeve Jelbert <treeve@sourcemage.org>
 	* devel/extra-cmake-modules: new spell
 
