spelling/goldendict: new spell, a meta-dictionary

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* spelling/goldendict: new spell, a meta-dictionary
+
 2014-03-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-drivers/mudita24: new spell, a mixer GUI for ice1712 based sound
 	  cards
