graphics/imagemagick: version 6.8.8-8

--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,12 @@
+2014-03-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 6.8.8-8
+	* DEPENDS: add optional dependencies on jbigkit, openjpeg,
+	  liblqr, pango, mupdf, libwebp and ufraw
+	* CONFIGURE, DEPENDS: use optional dependency on libx11 instead
+	  of query in CONFIGURE
+	* CONFIGURE, BUILD: make quantum bit depth configurable,
+	  add option for using openmp
+
 2013-12-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 6.8.7-10; added legacy url for stable
 	  grimoire branch
