--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,6 @@
+2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.15.5
+
 2014-02-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.15.4
 	* DEPENDS, BUILD, INSTALL: adapt to python3
