--- a/devel/python3/HISTORY
+++ b/devel/python3/HISTORY
@@ -1,3 +1,7 @@
+2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.4.0
+	* python.gpg: add key F73C700D: public key "Larry Hastings <larry@hastings.org>"
+
 2014-02-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.3.4
 	  SECURITY_PATCH++, fixes CVE-2013-1752
