--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,7 @@
+2014-03-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.35; SECURITY_PATCH++
+	  (CVE-2014-2323, CVE-2014-2324)
+
 2014-01-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.34; SECURITY_PATCH++
 	  (CVE-2013-4508, CVE-2013-4559, CVE-2013-4560)
