xcb-util-cursor-0.1.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
+	* xorg-app/xcb-util-cursor: new spell
+
 2014-03-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* spelling/goldendict: new spell, a meta-dictionary
 
