avidemux3: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-19 Thomas Orgis <sobukus@sourcemage.org>
+	* video/avidemux3: new spell, version 3 of the video editor
+
 2014-03-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* spelling/goldendict: new spell, a meta-dictionary
 
