smgl/firefox-smglwiki: fix install path

--- a/smgl/firefox-smglwiki/INSTALL
+++ b/smgl/firefox-smglwiki/INSTALL
@@ -1,3 +1,2 @@
-cd $SOURCE_DIRECTORY                                             &&
-cp ./smgl_wiki.src $INSTALL_ROOT/usr/lib/firefox/searchplugins/  &&
-cp ./smgl_wiki.png $INSTALL_ROOT/usr/lib/firefox/searchplugins/
+cd $SOURCE_DIRECTORY                                                                            &&
+install -m644 smgl_wiki.png smgl_wiki.src $INSTALL_ROOT/usr/lib/firefox/browser/searchplugins/
