--- a/smgl/firefox-smglwiki/HISTORY
+++ b/smgl/firefox-smglwiki/HISTORY
@@ -1,3 +1,6 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* INSTALL: fixed install path
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
