audio-plugins/cmt: honour our CFLAGS/CXXFLAGS

--- a/audio-plugins/cmt/HISTORY
+++ b/audio-plugins/cmt/HISTORY
@@ -1,3 +1,7 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: use default_build_make
+	* PRE_BUILD, 0001-honour-external-FLAGS.patch: honour our CFLAGS/CXXFLAGS
+
 2007-11-27 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 1.16.
 	* PRE_BUILD: Updated sedits.
