dave_robillard.gpg: add key 29727060

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* dave_robillard.gpg: add key 29727060
+
 2014-03-19 Thomas Orgis <sobukus@sourcemage.org>
 	* video/avidemux3: new spell, version 3 of the video editor
 
