audio-soft/alsa-patch-bay: fix build errors

--- a/audio-soft/alsa-patch-bay/HISTORY
+++ b/audio-soft/alsa-patch-bay/HISTORY
@@ -1,3 +1,7 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD, PRE_BUILD, 0001-fix-missing-includes.patch:
+	  fix build errors
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	* 19C57B14.gpg: added gpg keyring
