audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for crossover and equalization in active speakers

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for
+	  crossover and equalization of active speakers
+
 2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* dave_robillard.gpg: add key 29727060
 
