haskell/haskell-git-annex: version 5.20140320

--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,6 @@
+2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.20140320
+
 2014-03-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20140306
 	* DEPENDS: add dependencies on haskell-case-insensitive and
