audio-plugins/vlevel: new spell, a compressor with lookahead for LADSPA

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* audio-plugins/vlevel: new spell, a compressor with lookahead for LADSPA
+
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for
 	  crossover and equalization of active speakers
