audio-plugins/tap-plugins: version 0.7.2

--- a/audio-plugins/tap-plugins/HISTORY
+++ b/audio-plugins/tap-plugins/HISTORY
@@ -1,3 +1,10 @@
+2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.7.2
+	* CONFLICTS: removed
+	* PRE_BUILD, INSTALL, 0001-use-CFLAGS-LDFLAGS-passed-in-from-the-environment.patch:
+	  clean up Makefile
+	* BUILD: use default_build_make
+
 2007-02-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* all: Renamed to tap-plugins.
 	* CONFLICTS: Added, conflicts tap.
