utils/rtirq: version 20130909

--- a/utils/rtirq/HISTORY
+++ b/utils/rtirq/HISTORY
@@ -1,3 +1,6 @@
+2014-03-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 20130909
+
 2011-10-15 Bor Kraljič <pyrobor@ver.si>
 	* DEPENDS: schedutils was deprecated in favour of util-linux (fixes #286)
 
