--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2014-03-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.8.4.1
+
 2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.3.1
 
