--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,7 @@
+2014-03-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.3
+	  change url
+
 2014-03-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version v1.5
 	* FINAL: force ldconfig
