video/ffmpeg: version 2.2

--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,8 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.2
+	* CONFIGURE: add option for Blackmagick Decklink output
+	* DEPENDS: add optional dependencies on libwebp and OPENGL
+
 2014-02-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.4
 
