audio-plugins/calf-plugins: new spell, professional-grade audio plugins for jack

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* audio-plugins/calf-plugins: new spell, professional-grade audio plugins
+	  for jack
+
 2014-03-22  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/rbtools: new spell, tools for ReviewBoard
 
