move hicolor-icon-theme to desktop-themes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-24  Treeve Jelbert <treeve@sourcemage.org>
+	* hicolor-icon-theme: move to desktop-themes
+
 2014-03-24 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/smtpc: new spell, test smtp client
 
