smtpc: new spell, test smtp client

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-24 Vlad Glagolev <stealth@sourcemage.org>
+	* mail/smtpc: new spell, test smtp client
+
 2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/calf-plugins: new spell, professional-grade audio plugins
 	  for jack
