audio-creation/lmms: add optional dependency on stk

--- a/audio-creation/lmms/HISTORY
+++ b/audio-creation/lmms/HISTORY
@@ -1,6 +1,7 @@
 2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.0.0
-	* DEPENDS: add dependency on fltk, optional dependency on calf-plugins
+	* DEPENDS: add dependency on fltk, optional dependency on calf-plugins,
+	  optional dependency on stk
 
 2010-01-22 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.4.6
