remove options from waf that aren't common to all users of waf

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 	* audio-plugins/calf-plugins: new spell, professional-grade audio plugins
 	  for jack
 	* audio-libs/stk: new spell, the synthesis toolkit in C++
+	* FUNCTIONS: bring waf_build into line with default_build
 
 2014-03-22  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/rbtools: new spell, tools for ReviewBoard
