audio-creation/ardour3: version 3.5.357

--- a/audio-creation/ardour3/HISTORY
+++ b/audio-creation/ardour3/HISTORY
@@ -1,3 +1,7 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.5.357
+	* BUILD: add --configdir and --freedesktop to OPTS
+
 2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: switched jack to JACK-DRIVER; ardour3 works well with jack2
 	  after some internal configuration
