devel/llvm: fixed clang tarball name change, removed patching of Tools.cpp

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,8 @@
+2014-03-26 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: SOURCE3 was updated to upstream
+	* PRE_BUILD: corrected clang directory name change, removed patching of Tools.cpp
+	* Tools.cpp.patch: removed
+
 2014-01-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.4
 	* llvm.gpg: add key BB5A0569: "Bill Wendling <void@llvm.org>"
