devel/llvm: the patch was replaced by sed

--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,6 +1,7 @@
 2014-03-26 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: SOURCE3 was updated to upstream
-	* PRE_BUILD: corrected clang directory name change, removed patching of Tools.cpp
+	* PRE_BUILD: corrected clang directory name change,
+	  removed patching of Tools.cpp, sed was used instead
 	* Tools.cpp.patch: removed
 
 2014-01-06 Treeve Jelbert <treeve@sourcemage.org>
