gstpw: new spell, simple GTK+2 stopwatch program

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-04-01 Vlad Glagolev <stealth@sourcemage.org>
+	* utils/gstpw: new spell, simple GTK+2 stopwatch program
+
 2014-03-25 Ismael Luceno <ismael@sourcemage.org>
 	* editors/vimoutliner: new spell, Outline processor designed for
 	  lightning fast authoring
