--- a/shell-term-fm/spacefm/HISTORY
+++ b/shell-term-fm/spacefm/HISTORY
@@ -1,3 +1,6 @@
+2014-04-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.9.4
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.9.3
 	* DEPENDS: added bash, as noted in release info
