--- a/crypto/loop-aes/HISTORY
+++ b/crypto/loop-aes/HISTORY
@@ -1,3 +1,6 @@
+2014-04-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.7b
+
 2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.7a
 
