video/mpv: version 0.3.7

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,8 @@
+2014-04-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.7
+	* BUILD, CONFIGURE, DEPENDS, INSTALL, PRE_BUILD: switch to waf
+	  build system
+
 2014-03-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.6
 
