gnu/gcc: version 4.8.2

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,8 +1,16 @@
-2013-08-13 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Updated to 4.6.4
-	  Fixes compilation against texinfo 5.0+
-	* glibc216.patch: Removed, fix included in 4.6.4
-	* PRE_BUILD: No longer apply glibc216.patch
+2013-10-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.8.2
+	* PRE_BUILD, 0001-remove-libffi.patch: add patch to remove
+	  redundant libffi
+	* PRE_BUILD, 0002-4.8.0-ffast-math.patch: renew patch
+	* PRE_BUILD, 0003-fix-header-generation-for-libgo.patch:
+	  fix header generation for libgo
+	* txt00120.txt.gz, ecj-4.3.jar.sig, ada-symbolic-tracebacks.diff, gcc-4.4.0-ffast-math.patch, mksysinfo.patch: removed
+	* DETAILS, BUILD: use new version of the ada bootstrap compiler
+	* DETAILS: there is now one integrated tarball, so remove multiple source files
+	* PRE_BUILD: no need to unpack multiple files, except for ada
+	  do not apply ffast-math.patch or remove-libffi.patch
+	* DEPENDS: add perl
 
 2013-02-10 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply go patch only if Go compiler was included into build
@@ -17,6 +25,15 @@
 2012-10-03 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply the patch
 	* glibc216.patch: added, to fix build with glibc 2.16
+
+2013-08-13 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 4.6.4
+	  Fixes compilation against texinfo 5.0+
+	* glibc216.patch: Removed, fix included in 4.6.4
+	* PRE_BUILD: No longer apply glibc216.patch
+
+2012-06-14 Treeve Jelbert <treeve01@oi.be>
+	* DETAILS: version 4.7.1
 
 2012-03-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.6.3
